--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body
     background-color: #c0d6ff;
     border-radius: 5%;
     margin-top: 3%;
-    font-family: 'Aref Ruqaa', serif;
+    font-family: 'Pacifico', cursive;
     width:50%;
 }
 .col-md-4 , .col-md-4
